[tool.poetry]
name = "wbdata"
version = "1.0.0.dev"
description = "A library to access World Bank data"
authors = ["Oliver Sherouse <oliver@oliversherouse.com>"]
license = "GPL-2.0+"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
repository = "https://github.com/OliverSherouse/wbdata"
documentation = "https://wbdata.readthedocs.io/"
keywords = ["World Bank", "data", "economics"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.0"
tabulate = "^0.8.5"
appdirs = "^1.4"

pandas = {version = ">=1,<3", optional=true}
cachetools = "^5.3.2"
shelved-cache = "^0.3.1"
backoff = "^2.2.1"
dateparser = "^1.2.0"
decorator = "^5.1.1"

[tool.poetry.extras]
pandas = ["pandas"]

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.11"
ipython = "<8"

[tool.poetry.group.tests.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocstrings = "^0.24.0"

[tool.poetry.group.types.dependencies]
mypy = "^1.8.0"
types-cachetools = "^5.3.0.7"
types-tabulate = "^0.9.0.20240106"
types-decorator = "^5.1.8.20240106"
types-appdirs = "^1.4.3.5"
types-requests = "^2.31.0.20240106"
types-dateparser = "^1.1.4.20240106"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
